# task-manager

./: .gitignore  LICENSE  README.md
backend/: .env  .gitignore  Cargo.toml  docker-compose.yml
backend/config/: dev.toml  env.rs  mod.rs  prod.toml  settings.rs
backend/src/: db.rs  main.rs
backend/src/handlers/: user_handler.rs
backend/src/models/: user.rs
backend/src/models/task/: model.rs  repository.rs
backend/src/models/user/: mod.rs  model.rs  repository.rs
backend/src/routes/: mod.rs  user_routes.rs
