[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres","uuid", "chrono","migrate" ] }
tokio = { version = "1.45.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] } 
chrono = { version = "0.4.41", features = ["serde"] }  
config = "0.15.11"
bcrypt = "0.17.0"